--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -375,9 +375,9 @@
 
                     <div class="form-group">
                         <a href="#" class="btn btn-danger" id="prev-3">BACK</a>
-                        <a href="#" class="btn btn-success" id="submit">PROCCED TO PAYMENT</a>
+<!--                        <a href="#" class="btn btn-success" id="submit">PROCCED TO PAYMENT</a>-->
                         <!-- id=submi => id=next3 -->
-                        <!-- <input type="submit" name="submit" value="PROCCED TO PAYMENT" id="submit" class="btn btn-success"> -->
+                         <input type="submit" name="submit" value="PROCCED TO PAYMENT" id="submit" class="btn btn-success">
                     </div>
                 </div>
             </form>
