--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -3,7 +3,7 @@
     <div class="row position-absolute logofaq">
         <div class="col-12">
             <div class="row">
-                <h1 class="h5 font-weight-bold ">FREQUENTLY ASKED QUESTIONS</h1>
+                <h1 class="font-weight-bold ">FREQUENTLY ASKED QUESTIONS</h1>
             </div>
         </div>
     </div>
