--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -40,6 +40,7 @@
                                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
                                 </div>-->
                                 <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                             </form>
                         </div>
                     </div>
